POC/force-app/main/default/objects/Account/fields/Billing_Address_Source__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Source__c</fullName>
    <description>https://app.asana.com/0/1202710080826437/1204894558785374/f</description>
    <inlineHelpText>Enrichment source where the billing address was identified</inlineHelpText>
    <label>Billing Address Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Address_Source</valueSetName>
    </valueSet>
</CustomField>