POC/force-app/main/default/objects/Account/fields/Billing_Address_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://app.asana.com/0/515645212208478/1204937820537245/f</description>
    <label>Billing Address Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>