POC/force-app/main/default/objects/Account/fields/Book_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Book_Assigned__c</fullName>
    <description>https://app.asana.com/0/1173635330340929/1201622638572643</description>
    <inlineHelpText>This field denotes the future book this account will be assigned to when new reps are hired.</inlineHelpText>
    <label>Account Book Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>