POC/force-app/main/default/objects/Account/fields/BVC_Notes__c.field-meta.xml
<CustomField>
    <fullName>BVC_Notes__c</fullName>
    <description>Business Value Consultant Notes https://app.asana.com/0/1206411435319312/1207225282597519/f</description>
    <inlineHelpText>Business Value Consultant Notes</inlineHelpText>
    <label>BVC Notes</label>
    <type>TextArea</type>
</CustomField>