POC/force-app/main/default/objects/Account/fields/Calculated_Hierarchy_Segment__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Hierarchy_Segment__c</fullName>
    <description>Hierarchy Segment as calculated and updated via DE pipeline</description>
    <label>Calculated Hierarchy Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Revenue_Segment_for_Acc_and_EE</valueSetName>
    </valueSet>
</CustomField>