POC/force-app/main/default/objects/Account/fields/Can_Refer_Deals__c.field-meta.xml
<CustomField>
    <fullName>Can_Refer_Deals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this partner account has permission to submit deal referrals. When enabled, users from this partner account will see the Referrals tab under Sales and the &#39;Refer a Deal&#39; button on the home page (https://app.asana.com/1/15793206719/project/1209121380111720/task/1209183857405425)</description>
    <inlineHelpText>Indicates whether this partner account has permission to submit deal referrals. When enabled, users from this partner account will see the Referrals tab under Sales and the &#39;Refer a Deal&#39; button on the home page</inlineHelpText>
    <label>Can Refer Deals</label>
    <type>Checkbox</type>
</CustomField>