POC/force-app/main/default/objects/Account/fields/Channel_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Channel_Coverage__c</fullName>
    <description>https://app.asana.com/0/0/1204823546517461/f</description>
    <formula>IF(
  ISPICKVAL(Channel_Coverage_Override__c, &#39;&#39;),
  IF(
    Account_Hierarchy_Sales_Region__c = &#39;LATAM&#39; || (
      Account_Hierarchy_Sales_Region__c = &#39;APAC&#39; &amp;&amp; (
        Account_Hierarchy_Subregion__c = &#39;North East Asia&#39; ||
        Account_Hierarchy_Subregion__c = &#39;South Asia&#39;
      )
    ),
    &#39;Geofenced&#39;,
    &#39;&#39;
  ),
  TEXT(Channel_Coverage_Override__c)
)</formula>
    <label>Channel Coverage [Deprecated]</label>
    <type>Text</type>
</CustomField>