POC/force-app/main/default/objects/Account/fields/Channel_Coverage_Override__c.field-meta.xml
<CustomField>
    <fullName>Channel_Coverage_Override__c</fullName>
    <description>https://app.asana.com/0/0/1204823546517461/f</description>
    <label>Channel Coverage Override [Deprecated]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Geofenced</fullName>
            </value>
            <value>
                <fullName>Non-Geofenced Billing Owner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>