POC/force-app/main/default/objects/Account/fields/Churn_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Score__c</fullName>
    <description>AI-generated churn risk score from Einstein model (0-100%). Updated daily via Data Cloud transformations.</description>
    <label>Churn Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>