POC/force-app/main/default/objects/Account/fields/Churn_Risk_Tier__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Tier__c</fullName>
    <description>Categorized churn risk level based on AI prediction score. Used for prioritizing intervention efforts.</description>
    <label>Churn Risk Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>No Risk</fullName>
                <default>true</default>
                <label>No Risk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>