POC/force-app/main/default/objects/Account/fields/Churn_Watch__c.field-meta.xml
<CustomField>
    <fullName>Churn_Watch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by CS to highlight accounts that are at risk of churn.</description>
    <inlineHelpText>Please check if you have knowledge that this account should be on churn watch</inlineHelpText>
    <label>Churn Watch</label>
    <type>Checkbox</type>
</CustomField>