POC/force-app/main/default/objects/Account/fields/Churned_Date__c.field-meta.xml
<CustomField>
    <fullName>Churned_Date__c</fullName>
    <description>Used by CS to track date that this Account churned.</description>
    <label>Churned Date</label>
    <type>Date</type>
</CustomField>