POC/force-app/main/default/objects/Account/fields/Clearbit_Country__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Country__c</fullName>
    <description>Country given by Clearbit</description>
    <formula>cbit__Clearbit__r.cbit__CompanyGeoCountry__c</formula>
    <label>Clearbit Country</label>
    <type>Text</type>
</CustomField>