POC/force-app/main/default/objects/Account/fields/Clearbit_State__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_State__c</fullName>
    <formula>cbit__Clearbit__r.cbit__CompanyGeoState__c</formula>
    <label>Clearbit State</label>
    <type>Text</type>
</CustomField>