POC/force-app/main/default/objects/Account/fields/Clearbit_Ultimate_Parent_Domain__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Ultimate_Parent_Domain__c</fullName>
    <description>Account hierarchy fields to track parent-child relationships from data enrichment sources https://app.asana.com/1/15793206719/project/1208607285344507/task/1210212466941570?focus=true</description>
    <inlineHelpText>The domain name of the ultimate parent company from Clearbit</inlineHelpText>
    <label>Clearbit Ultimate Parent Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>