POC/force-app/main/default/objects/Account/fields/Company_Fiscal_Year_Start__c.field-meta.xml
<CustomField>
    <fullName>Company_Fiscal_Year_Start__c</fullName>
    <description>Manual input field to track fiscal year start.
https://app.asana.com/0/515645212208478/1207069342877990/f</description>
    <label>Company Fiscal Year Start</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calendar_Months</valueSetName>
    </valueSet>
</CustomField>