POC/force-app/main/default/objects/Account/fields/Company_Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Company_Linkedin__c</fullName>
    <description>Company LinkedIn Handle as provided by Clearbit.</description>
    <formula>cbit__Clearbit__r.cbit__CompanyLinkedinHandle__c</formula>
    <label>Company Linkedin</label>
    <type>Text</type>
</CustomField>