POC/force-app/main/default/objects/Account/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>https://app.asana.com/0/1199543532541045/1204519085429917/f</description>
    <inlineHelpText>Company Name from Enrichment Source</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>