POC/force-app/main/default/objects/Account/fields/Company_Penetration_1d28s_Employees__c.field-meta.xml
<CustomField>
    <fullName>Company_Penetration_1d28s_Employees__c</fullName>
    <description>Total Paid Seats within the Organization / Number of Employees at the Company</description>
    <formula>IF(
    OR(
        ISBLANK(paid_seats__c),
        ISBLANK(NumberOfEmployees),
        paid_seats__c = 0,
        NumberOfEmployees = 0
    ),
    0,
    paid_seats__c / NumberOfEmployees 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Paid Seats within the Organization / Number of Employees at the Company</inlineHelpText>
    <label>Company Penetration (Seats / Employees)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>