POC/force-app/main/default/objects/Account/fields/Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_URL__c</fullName>
    <description>Company URL given by Clearbit</description>
    <formula>cbit__Clearbit__r.cbit__CompanyUrl__c</formula>
    <inlineHelpText>Company URL given by Clearbit</inlineHelpText>
    <label>Company URL</label>
    <type>Text</type>
</CustomField>