POC/force-app/main/default/objects/Account/fields/Compete_Program__c.field-meta.xml
<CustomField>
    <fullName>Compete_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if account is a part of Compete Program 1175292061558194</description>
    <inlineHelpText>Shows if account is a part of Compete Program</inlineHelpText>
    <label>Compete Program</label>
    <type>Checkbox</type>
</CustomField>