POC/force-app/main/default/objects/Account/fields/Complete_Contact_Match__c.field-meta.xml
<CustomField>
    <fullName>Complete_Contact_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complete Contact Match</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Complete Contact Match)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>