POC/force-app/main/default/objects/Account/fields/Complete_Opportunity_Match__c.field-meta.xml
<CustomField>
    <fullName>Complete_Opportunity_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complete Opportunity Match</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>