POC/force-app/main/default/objects/Account/fields/ConciergeEnabled__c.field-meta.xml
<CustomField>
    <fullName>ConciergeEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Take this on as a short term fix, can be deprecated when [SCOPE] Populate account field with &#39;Concierge Flags Enabled&#39; dynamically (https://app.asana.com/0/0/1199884242416720/f) is finished.</description>
    <label>Concierge Enabled</label>
    <type>Checkbox</type>
</CustomField>