POC/force-app/main/default/objects/Account/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://app.asana.com/0/1169811029711865/1202838723774611

involved in Rollup Helper job</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Accounts</relationshipLabel>
    <relationshipName>ContrAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>