POC/force-app/main/default/objects/Account/fields/ConversionToCustomerDate__c.field-meta.xml
<CustomField>
    <fullName>ConversionToCustomerDate__c</fullName>
    <description>Date when the account was converted from Service Account (task link)</description>
    <inlineHelpText>Date when the account was converted from Service Account</inlineHelpText>
    <label>Conversion to Customer Date</label>
    <type>Date</type>
</CustomField>