POC/force-app/main/default/objects/Account/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Company Geo Country Code as given by Clearbit</description>
    <formula>cbit__Clearbit__r.cbit__CompanyGeoCountryCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Company Geo Country Code as given by Clearbit</inlineHelpText>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>