POC/force-app/main/default/objects/Account/fields/Country_Manager__c.field-meta.xml
<CustomField>
    <fullName>Country_Manager__c</fullName>
    <description>Specifies whether an account is also being worked in parallel by a country manager.

https://asana.lightning.force.com/lightning/r/Project__c/a0b6100001Qba6eAAB/view</description>
    <inlineHelpText>Specifies whether an account is also being worked in parallel by a country manager</inlineHelpText>
    <label>Country Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rodolfo Ohl (Brazil)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>