POC/force-app/main/default/objects/Account/fields/CoupaVendorOnboarding__c.field-meta.xml
<CustomField>
    <fullName>CoupaVendorOnboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coupa Vendor Onboarding</label>
    <type>Checkbox</type>
</CustomField>