POC/force-app/main/default/objects/Account/fields/CPQ_Customer_On_Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Customer_On_Credit_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True should not be able to create Quote</description>
    <inlineHelpText>If True should not be able to create Quote</inlineHelpText>
    <label>Customer On Credit Hold</label>
    <type>Checkbox</type>
</CustomField>