POC/force-app/main/default/objects/Account/fields/Credit_Card_Trial__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://app.asana.com/0/1206954742081993/1207277866810692/f</description>
    <label>Credit Card Trial</label>
    <type>Checkbox</type>
</CustomField>