POC/force-app/main/default/objects/Account/fields/Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://app.asana.com/0/1206291515899616/1206731937211724</description>
    <inlineHelpText>If checked, then Sales Rep will not be able to create Opportunity. Managed by Finance.</inlineHelpText>
    <label>Credit Hold</label>
    <type>Checkbox</type>
</CustomField>