POC/force-app/main/default/objects/Account/fields/Credit_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold_Reason__c</fullName>
    <description>https://app.asana.com/0/1206291515899616/1206731937211724</description>
    <inlineHelpText>Reason why there&#39;s a credit hold on the account. Managed by Finance.</inlineHelpText>
    <label>Credit Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>