POC/force-app/main/default/objects/Account/fields/CS_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>CS_Owner_Name__c</fullName>
    <label>CS Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>