POC/force-app/main/default/objects/Account/fields/CS_Pool__c.field-meta.xml
<CustomField>
    <fullName>CS_Pool__c</fullName>
    <description>Picklist field, that helps to differentiate different pools for different regions and markets within a geo (https://app.asana.com/0/1169811029711865/1200798133349171)</description>
    <inlineHelpText>Picklist field, that helps to differentiate different pools for different regions and markets within a geo</inlineHelpText>
    <label>CS Pool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CS_Pool</valueSetName>
    </valueSet>
</CustomField>