POC/force-app/main/default/objects/Account/fields/CS_Priority__c.field-meta.xml
<CustomField>
    <fullName>CS_Priority__c</fullName>
    <description>Provide visibility on where CSMs are spending most effort 
https://app.asana.com/0/253313814113822/1201916610504509/f</description>
    <inlineHelpText>Priority - Accts where you&#39;re operating proactively, executing on high-leverage / impact activities to drive growth and/or mitigate risk
Maintain - Accts where you&#39;re establishing and maintaining an operating cadence that enables you to sustain current rate of growth</inlineHelpText>
    <label>CS Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Maintain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>