POC/force-app/main/default/objects/Account/fields/CS_Stage__c.field-meta.xml
<CustomField>
    <fullName>CS_Stage__c</fullName>
    <description>https://app.asana.com/0/1206411435319312/1207768608598727/f</description>
    <label>CS Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CS_Stage</valueSetName>
    </valueSet>
</CustomField>