POC/force-app/main/default/objects/Account/fields/CSM_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>CSM_Assigned_Date__c</fullName>
    <description>Date when CSM changed.

https://asana.lightning.force.com/lightning/r/Project__c/a0b4M00002NGo5pQAD/view</description>
    <inlineHelpText>Date when CSM changed.</inlineHelpText>
    <label>CSM Assigned Date</label>
    <type>Date</type>
</CustomField>