POC/force-app/main/default/objects/Account/fields/CSM_Assigned_Datetime__c.field-meta.xml
<CustomField>
    <fullName>CSM_Assigned_Datetime__c</fullName>
    <description>Date when CSM changed.

https://asana.lightning.force.com/lightning/r/Project__c/a0b4M00002NGo5pQAD/view</description>
    <inlineHelpText>Date when CSM changed.

https://asana.lightning.force.com/lightning/r/Project__c/a0b4M00002NGo5pQAD/view</inlineHelpText>
    <label>CSM Assigned Datetime</label>
    <type>DateTime</type>
</CustomField>