POC/force-app/main/default/objects/Account/fields/Current_Internal_10d28s__c.field-meta.xml
<CustomField>
    <fullName>Current_Internal_10d28s__c</fullName>
    <description>From Redshift, populated by Snaplogic daily. Current internal 10d28 users (10 logins in last 28 days). Build new fields on Account (https://app.asana.com/0/1169811029711865/1174989140219396/f)</description>
    <inlineHelpText>Number of users who logged in at least 10 times in the last 28 days</inlineHelpText>
    <label>Current Internal 10d28s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>