POC/force-app/main/default/objects/Account/fields/Current_Internal_1d7__c.field-meta.xml
<CustomField>
    <fullName>Current_Internal_1d7__c</fullName>
    <description>From Redshift: current 1d7 active users
https://app.asana.com/0/515645212208478/1205225369003108/f</description>
    <inlineHelpText>Number of users who have visited Asana at least once in the last 7 days</inlineHelpText>
    <label>Current Internal 1d7</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>