POC/force-app/main/default/objects/Account/fields/Current_Internal_3d7__c.field-meta.xml
<CustomField>
    <fullName>Current_Internal_3d7__c</fullName>
    <description>From Redshift: current 3d7 active users
https://app.asana.com/0/515645212208478/1205225369003108/f</description>
    <inlineHelpText>Number of users who have visited Asana at least three times in the last 7 days</inlineHelpText>
    <label>Current Internal 3d7</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>