POC/force-app/main/default/objects/Account/fields/CurrentOwner__c.field-meta.xml
<CustomField>
    <fullName>CurrentOwner__c</fullName>
    <description>Captures the full name of the owner of the account (https://app.asana.com/0/1203996306908771/1206689005144245/f)</description>
    <formula>Owner.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>