POC/force-app/main/default/objects/Account/fields/Custom_Routing_Logic__c.field-meta.xml
<CustomField>
    <fullName>Custom_Routing_Logic__c</fullName>
    <description>Exception to general global routing logic
https://app.asana.com/0/515645212208478/1206646557876691/f</description>
    <label>Custom Routing Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMEA_NB_Named Account</fullName>
                <label>EMEA-NB-Named Account</label>
            </value>
            <value>
                <fullName>DO NOT ROUTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>