POC/force-app/main/default/objects/Account/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Customer Account)</relationshipLabel>
    <relationshipName>Customer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>