POC/force-app/main/default/objects/Account/fields/Customer_Advocacy_Program__c.field-meta.xml
<CustomField>
    <fullName>Customer_Advocacy_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ability for CS to document customer advocacy program members and then track account changes over time.
https://app.asana.com/0/253313814113822/1201754159992517/f</description>
    <inlineHelpText>Customer is a member of advocacy program</inlineHelpText>
    <label>Customer Advocacy Program</label>
    <type>Checkbox</type>
</CustomField>